# CLItty

./: Cargo.toml
src/: core.rs  lib.rs  ui.rs
