[package]
name = "clitty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ui"]
ui = ["crossterm", "strip-ansi-escapes"]

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.27", optional = true }
strip-ansi-escapes = { version = "0.2", optional = true }
