[package]
name = "clitty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ui"]
ui = ["crossterm", "strip-ansi-escapes"]

[dependencies]
anyhow = "1"
crossterm = { version = "0", optional = true }
strip-ansi-escapes = { version = "0", optional = true }
arboard = "3"
crossbeam-utils = "0"
regex = "1"